api/k8s/application/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helpme-api-service
  namespace: helpme
  labels:
    app: helpme-api
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: metrics
  selector:
    app: helpme-api
